--- a/webapp-iac/Jenkinsfile
+++ b/webapp-iac/Jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
                         : 'dev'
 
           // Folder and variable file locations
-          env.ENV_DIR  = "envs/${env.TARGET_ENV}"
+          env.ENV_DIR  = "webapp-iac/envs/${env.TARGET_ENV}"
           env.VAR_FILE = "${env.TARGET_ENV}.tfvars"
 
           echo "✔ Branch Detected: ${env.BRANCH_NAME}"
